# wms_bin

./: README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
warehouse_binning/: .gitignore  README.md  api.py  hooks.py  modules.txt  patches.txt  utils.py
warehouse_binning/events/: material_request.py  pick_list.py  pick_task.py  purchase_receipt.py  stock_entry.py  work_order.py
warehouse_binning/fixtures/: custom_field.json  print_format.json
warehouse_binning/warehouse_binning/doctype/bin_location/: bin_location.json  bin_location.py
warehouse_binning/warehouse_binning/doctype/bin_pick_list_item/: bin_pick_list_item.json  bin_pick_list_item.py
warehouse_binning/warehouse_binning/doctype/bin_stock_ledger_entry/: bin_stock_ledger_entry.json  bin_stock_ledger_entry.py
warehouse_binning/warehouse_binning/doctype/item_batch_bin_stock/: item_batch_bin_stock.json  item_batch_bin_stock.py
warehouse_binning/warehouse_binning/doctype/pick_task/: pick_task.json  pick_task.py
warehouse_binning/warehouse_binning/doctype/pick_task_item/: pick_task_item.json  pick_task_item.py
warehouse_binning/warehouse_binning/doctype/putaway_task/: putaway_task.json  putaway_task.py
warehouse_binning/warehouse_binning/doctype/putaway_task_item/: putaway_task_item.json  putaway_task_item.py
warehouse_binning/warehouse_binning/patches/: backfill_item_batch_bin_stock.py
warehouse_binning/warehouse_binning/report/bin_stock_report/: bin_stock_report.json  bin_stock_report.py
warehouse_binning/www/: scan.html
(+8 files in other folders)
