[project]
name = "warehouse_binning"
authors = [{ name = "Your Company" }]
description = "Bin-level putaway and pick tracking layered on top of ERPNext"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"
